Added liquibase changelog.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.url=jdbc:hsqldb:mem:dev-db;sql.syntax_pgs=true
 spring.datasource.username=sa
 spring.datasource.password=
+liquibase.change-log=classpath:db.changelog.xml
+#liquibase.default-schema=credit_system
 liquibase.enabled=false
